radware/anatolyb/deployment_bear.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animals-bear
spec:
  replicas: 2
  selector:
    matchLabels:
      app: animals
  template:
    metadata:
      labels:
        app: animals
    spec:
      containers:
        - name: animals
          image: supergiantkir/animals:bear
          ports:
            - containerPort: 80
              protocol: TCP
