radware/anatolyb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-music
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-music
  template:
    metadata:
      labels:
        app: spring-music
    spec:
      containers:
        - name: spring-music
          image: yanivomc/spring-music:latest
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: spring-music
  labels:
    app: spring-music
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: spring-music
